<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Protector</string>
    <string name="service_notification_title">Protector Active</string>
    <string name="service_notification_text">Monitoring your device</string>
    <string name="theft_alert_title">Theft Alert!</string>
    <string name="theft_alert_message">Your device is being moved away!</string>
    <string name="proximity_warning_title">Device Warning</string>
    <string name="proximity_warning_message">Don\'t forget your device</string>
    <string name="geofence_alert_title">Geofence Alert</string>
    <string name="geofence_alert_message">Device has left the designated area</string>
    <string name="voice_auth_failed_title">Unauthorized Voice</string>
    <string name="voice_auth_failed_message">Voice not recognized. Device alert engaging.</string>
    <string name="start_protection">Start Protection</string>
    <string name="stop_protection">Stop Protection</string>
    <string name="set_geofence">Set Geo-fence</string>
    <string name="proximity_radius">Proximity Radius (meters)</string>
    <string name="enable_voice_auth">Enable Voice Authentication</string>
    <string name="train_voice">Train Voice Model</string>
    <string name="status_active">Status: Active</string>
    <string name="status_inactive">Status: Inactive</string>
    <string name="subscription_title">Protector Premium</string>
    <string name="subscription_price">$4.99/month</string>
    <string name="premium_feature_locked">🔒 Premium Only</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
</resources>
